2007-08-14  Anand Babu  <ab@zresearch.com>

	* bmc-autoconfig.8.in: updated and moved from bmc-autoconfig.8.

2007-08-13  Albert Chu <chu11@llnl.gov>

	* common/doc/: Fix potential pre-processor bugs.

	* ipmiconsole/, libfreeipmi/, ipmimonitoring, common/: Add ASUS
	IPMI 2.0 workarounds.

	* ipmiconsole/ipmiconsole.8.in: Add some troubleshooting notes.

	* ipmimonitoring/src/libipmimonitoring/ipmi_monitoring.h: Fix
	comments.

	* common/src/tool-common.c (parse_kg): Support odd-lengthed hex
	codes.
	
2007-08-11  Albert Chu <chu11@llnl.gov>

	* configure.ac: Up lib versions appropriately.
	
2007-08-10  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/src/udm: Re-do UDM workarounds to be generic, not
	specific to lan, lan 2.0, or inband.

	* common/: Adjust for workaround flags change.

	* libfreeipmi/, ipmipower/, ipmiconsole/, ipmimonitoring/,
	common/: Support ASUS P5m2 workaround.
	
2007-08-10  Albert Chu <chu11@llnl.gov>

	* common/src/tool-common.h, common/src/tool-common.c
	(check_kg_len): New function.

	* common/src/cmdline-parse-common.c, ipmipower/, ipmiconsole/,
	ipmimonitoring/: Use check_kg_len function appropriately for k_g
	len checks.

	* ipmiconsole/src/libipmiconsole/ipmiconsole.h,
	ipmiconsole/src/libipmiconsole/ipmiconsole.c: Remove
	SOL_NOT_RESPONDING error code and error message.

	* ipmiconsole/src/libipmiconsole/ipmiconsole.h,
	ipmiconsole/src/libipmiconsole/ipmiconsole.c,
	ipmiconsole/src/libipmiconsole/ipmiconsole_processing.c: Rename
	IPMICONSOLE_ERR_EXCESS_RETRANSMISSIONS to
	IPMICONSOLE_ERR_EXCESS_RETRANSMISSIONS_SENT.  Add new error code
	IPMICONSOLE_ERR_EXCESS_ERRORS_RECEIVED.
	
	* ipmiconsole/src/ipmiconsole.c (main): Support more error codes
	under clean output conditions.
	
2007-08-09  Albert Chu <chu11@llnl.gov>

	* ipmiconsole/src/ipmiconsole.h: Add additional comments.

	* common/src/tool-common.c (parse_kg): Check for proper inputted
	hex digits.  Alter function to return k_g key length.
