@@ -1,3 +1,8 @@
+2007-08-14  Albert Chu <chu11@llnl.gov>
+
+	* bmc-config/src/bmc-config-sections.c
+	(bmc_config_section_set_value): Add error messages.
+	
 2007-08-14  Anand Babu  <ab@zresearch.com>
 
 	* bmc-autoconfig.8.in: updated and moved from bmc-autoconfig.8.
